--- a/package.json
+++ b/package.json
@@ -6,17 +6,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "aos": "^2.3.4",
-    "chart.js": "^4.4.4",
-    "leaflet": "^1.9.4",
-    "react": "^18.3.1",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.3.1",
-    "react-hooks": "^1.0.1",
+    "d3": "^7.9.0",
+    "ol": "^10.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
-    "react-simple-maps": "^3.0.0",
     "react-slick": "^0.30.2",
     "react-typewriter-effect": "^1.1.0",
     "slick-carousel": "^1.8.1",
